# fuzzy-sise

./: CMakeLists.txt  FuzzyDriver.cpp  FuzzyDriver.h  README.md  Road.cpp  Road.h  functions.cpp  functions.h  main.cpp  reg.xml  reguly.xml  trapez.xml  ustaw.xml
tinyxml2-master/: tinyxml2.cpp  xmltest.cpp
